namespace Verwaltungssystem;

public enum Tag
{
    Gelb,
    Rosa,
    Grün
}