classDiagram
%% Klassen
class Projekt {
    +int projektId
    +String name
    +String kunde
    +Benutzer projektleiter
	+List Information
}

class Benutzer {
    +int benutzerId
    +String name
    +Rolle rolle
	
	ErstelleProjekt()
	SchreibeInformation()
	SchreibeKommentar()
	
}

class Information {
    +int infoId
    +String inhalt
	+List Tags
	+List Kommentar
}

class Kommentar {
    +int kommentarId
    +String inhalt
	+Benutzer author
}

%% Enumerationen als eigene Boxen
class Tag {
    <<enumeration>>
    Gelb
    Rosa
    Grün
}

class Rolle {
    <<enumeration>>
    Projektleiter
    Mitarbeiter
}

%% Beziehungen mit Kardinalitäten
Benutzer "1" --> "0..*" Projekt : erstellt
Benutzer "1" --> "0..*" Information : schreibt
Benutzer "1" --> "0..*" Kommentar : schreibt
Projekt "1" --> "0..*" Information : enthält
Information "1" --> "0..*" Kommentar : hat
Information "1" --> "1..3*" Tag : hat
Benutzer "1" --> "1" Rolle: ist

%% Optional: Enums visuell gruppieren
Tag <|-- Information
Rolle <|-- Benutzer